--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -67,7 +67,7 @@
 
 .grid {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
@@ -88,7 +88,6 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
   border-color: #0070f3;
 }
 
