--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,28 +4,25 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem;
+  padding: 40px;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: #141414;
 }
 
 .main h1 {
   font-size: large;
-  color: #ebebeb
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  color: #ebebeb;
+  text-align: center;
 }
 
 @media (max-width: 600px) {
   .grid {
     width: 100%;
+    height: 100%;
     flex-direction: column;
   }
 }
